[gd_scene load_steps=9 format=2]

[ext_resource path="res://gui/view/CardDetail.tscn" type="PackedScene" id=1]
[ext_resource path="res://card_images/BT1-001.png" type="Texture" id=2]
[ext_resource path="res://gui/view/CardInfoWindow.gd" type="Script" id=3]
[ext_resource path="res://thridparty/big_font.tres" type="DynamicFont" id=5]

[sub_resource type="InputEventKey" id=1]
scancode = 16777231

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventKey" id=3]
scancode = 16777233

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="CardInfoWindow" type="PopupDialog"]
visible = true
margin_right = 1023.0
margin_bottom = 602.0
mouse_filter = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 241.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_right = 241.0
margin_bottom = 464.0
rect_min_size = Vector2( 126, 176 )
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 468.0
margin_right = 241.0
margin_bottom = 562.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
custom_constants/separation = 20

[node name="PrevButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 110.0
margin_bottom = 94.0
focus_mode = 1
mouse_filter = 1
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
shortcut = SubResource( 2 )
text = "PREV"

[node name="NextButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 130.0
margin_right = 241.0
margin_bottom = 94.0
rect_min_size = Vector2( 0, 50 )
focus_mode = 1
mouse_filter = 1
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
shortcut = SubResource( 4 )
text = "NEXT"

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer"]
margin_left = 266.0
margin_right = 612.0
margin_bottom = 562.0
mouse_filter = 1
size_flags_horizontal = 3

[node name="CardDetail" parent="HBoxContainer/ScrollContainer" instance=ExtResource( 1 )]
margin_right = 334.0
margin_bottom = 749.0
size_flags_horizontal = 3

[node name="ScrollContainer2" type="ScrollContainer" parent="HBoxContainer"]
visible = false
margin_left = 636.0
margin_right = 993.0
margin_bottom = 572.0
mouse_filter = 1
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ScrollContainer2"]
margin_right = 357.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RulingContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 637.0
margin_right = 983.0
margin_bottom = 562.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/RulingContainer"]
margin_right = 346.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 5 )
text = "RULING"
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/RulingContainer"]
margin_top = 36.0
margin_right = 346.0
margin_bottom = 562.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
